@@ -1,3 +1,8 @@
+Mon Apr 29 00:13:58 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/whatis.c (display): Display page names in the correct case
+	  using the new info->name field.
+
 Mon Apr 29 00:00:38 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/whatis.c (use_grep): Put a space in the grep command before
